--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "primeicons": "^5.0.0",
     "primevue": "^3.10.0",
