--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@electron/remote": "^2.0.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "electron-cookies": "heap/electron-cookies",
+    "keytar": "^7.7.0",
     "primeicons": "^5.0.0",
     "primevue": "^3.10.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "winreg": "^1.2.4"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/winreg": "^1.2.31",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
