--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "nodemon": "nodemon --config nodemon.json --exec \"yarn electron:serve\"",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
     "axios": "^0.24.0",
+    "chokidar": "^3.5.3",
     "core-js": "^3.6.5",
     "electron-cookies": "heap/electron-cookies",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-store": "^8.0.1",
     "keytar": "^7.7.0",
+    "nodemon": "^2.0.15",
     "primeicons": "^5.0.0",
     "primevue": "^3.10.0",
     "vue": "^3.0.0",
