--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
     "serve": "tsc-watch --onSuccess \"node dist\""
   },
   "dependencies": {
+    "any-shell-escape": "^0.1.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
+    "ffmpeg-static": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
-    "passport": "^0.5.0"
+    "multer": "^1.4.4",
+    "nanoid": "^3.2.0",
+    "passport": "^0.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.1",
+    "@types/ffmpeg-static": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/multer": "^1.4.7",
+    "@types/uuid": "^8.3.4",
     "tsc-watch": "^4.5.0"
   }
 }
