--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "3.1.6",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
